# nautilus_impl

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci-failures-autofix.yml  claude-code-review.yml  claude.yml  test.yml
backtest/: analysis.py  runner.py
config/: backtest.py  dry_run.py  live.py
data/scripts/: fetch_historical.py
examples/: simple_ema_backtest.py
instruments/: __init__.py  definitions.py
live/: dry_run_node.py  live_node.py
strategies/: __init__.py  bollinger_mean_reversion.py  ema_cross.py  rsi_momentum.py
tests/: test_instruments.py  test_strategies.py
